# adaptive-simple-text-classifier

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: ci.yml
adaptive_classifier/: __init__.py  classifier.py  embeddings.py  index.py  normalizer.py  providers.py  taxonomy.py  types.py  vector_stores.py
example/: README.md  benchmark.py  categories.json
tests/: test_core.py  test_vector_stores.py
